# NFC_FR

./: .gitignore  Dockerfile  Makefile  NFC_FR.md  docker-compose.yml  railway.toml
backend/: .dockerignore  .env.docker  Cargo.toml  Dockerfile
backend/migrations/2026-02-26-065701-0000_init_schema/: down.sql  up.sql
backend/src/: main.rs  models.rs  schema.rs
backend/src/handlers/: menu.rs  mod.rs  order.rs  table.rs  ws.rs
db/: init.sql
frontend/: .dockerignore  Dockerfile  package-lock.json
frontend/src/: types.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/staff/: page.tsx
frontend/src/app/table/[id]/: page.tsx
frontend/src/components/: Cart.tsx  LiveMonitor.tsx  ProductList.tsx  ServiceButton.tsx
