[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["ws", "macros"] }
axum-extra = { version = "0.12.5", features = ["typed-header"] }
bigdecimal = { version = "0.4.10", features = ["serde"] }
chrono = { version = "0.4.44", features = ["serde"] }
diesel = { version = "2.3.6", features = ["postgres", "numeric", "uuid", "chrono", "r2d2"] }
dotenvy = "0.15.7"
futures-util = "0.3.32"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["cors", "fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
